...
            android:elevation="4dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_border"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ingradients"
            android:id="@+id/btn_ingradients"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginLeft="8dp"
...
